# weather-data-collector

./: pyproject.toml  weather_collector.py  weather_data.json
.github/workflows/: weather_data.yml
