[tool.poetry]
name = "weather-data-collector"
version = "0.1.0"
description = ""
authors = ["MohmdFo <mohammad.fotouhi80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
